--- a/Wordel/Wordel/Views/MainWindow.axaml
+++ b/Wordel/Wordel/Views/MainWindow.axaml
@@ -4,7 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:Wordel.Views"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="500"
+        Width="400" Height="500"
         x:Class="Wordel.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="Wordel">
