--- a/Wordel/Wordel/Views/MainWindowView.axaml
+++ b/Wordel/Wordel/Views/MainWindowView.axaml
@@ -4,10 +4,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:Wordel.Views"
-        mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="500"
-        Width="400" Height="500"
+        mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="600"
+        Width="400" Height="600"
         x:Class="Wordel.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
-        Title="Wordel">
-        <views:MainView />
+        Title="Wordel"
+        Foreground="White"
+        Background="#222"
+        Content="{Binding Content}">
 </Window>
