--- a/Wordel/Wordel/Views/GameView.axaml
+++ b/Wordel/Wordel/Views/GameView.axaml
@@ -7,25 +7,15 @@
              mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="600"
              x:Class="Wordel.Views.GameView">
   <Design.DataContext>
-    <!-- This only sets the DataContext for the previewer in an IDE,
-         to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
     <viewModels:GameViewModel />
   </Design.DataContext>
-    <StackPanel Spacing="10">
+    <StackPanel Spacing="15">
         <Grid Height="50" ColumnDefinitions="Auto, *, Auto">
             <Image Grid.Column="0" Margin="5" PointerReleased="NewGame_OnPointerReleased" Source="/Assets/new.png"/>
             <TextPresenter Grid.Column="1" VerticalAlignment="Center" TextAlignment="Center" FontWeight="ExtraBold" FontSize="30">WORDEL</TextPresenter>
             <Image Grid.Column="2" Margin="5" PointerReleased="Settings_OnPointerReleased" Source="/Assets/cog.png"/>
         </Grid>
-        <ItemsRepeater Items="{Binding Answers}">
-            <ItemsRepeater.Layout>
-                <StackLayout Spacing="5"/>
-            </ItemsRepeater.Layout>
-            <ItemsRepeater.ItemTemplate>
-                <DataTemplate>
-                    <components:AnswerField></components:AnswerField>
-                </DataTemplate>
-            </ItemsRepeater.ItemTemplate>
-        </ItemsRepeater>
+        <StackPanel Name="AnswerStackPanel" Spacing="5">
+        </StackPanel>
     </StackPanel>
 </UserControl>
