Cleanup code Fix most issues
Signed-off-by: Tin Svagelj <tin.svagelj@live.com>

--- a/Wordel/Wordel/App.axaml
+++ b/Wordel/Wordel/App.axaml
@@ -7,6 +7,6 @@
     </Application.DataTemplates>
 
     <Application.Styles>
-        <FluentTheme Mode="Dark"/>
+        <FluentTheme/>
     </Application.Styles>
 </Application>
