--- a/Wordel/Wordel/Views/SettingsView.axaml
+++ b/Wordel/Wordel/Views/SettingsView.axaml
@@ -18,10 +18,12 @@
         </Grid>
         <Grid ColumnDefinitions="*, Auto" RowDefinitions="Auto, Auto">
             <TextPresenter Grid.Row="0" Grid.Column="0" Margin="10,0,0,0" VerticalAlignment="Center" TextAlignment="Left" FontSize="18">Duljina riječi:</TextPresenter>
-            <NumericUpDown Grid.Row="0" Grid.Column="1" Margin="0,0,10,0" Value="{Binding Path=Settings.WordLength, Mode=OneTime}" ValueChanged="WordLength_OnValueChanged" Width="150" Increment="1" Minimum="4" Maximum="10"/>
+            <NumericUpDown Grid.Row="0" Grid.Column="1" Margin="0,0,10,0" Width="150" Increment="1" Minimum="4" Maximum="10"
+                           Value="{Binding Settings.WordLength, Mode=OneTime}" ValueChanged="WordLength_OnValueChanged" />
             
             <TextPresenter Grid.Row="1" Grid.Column="0" Margin="10,0,0,0" VerticalAlignment="Center" TextAlignment="Left" FontSize="18">Broj pokušaja:</TextPresenter>
-            <NumericUpDown Grid.Row="1" Grid.Column="1" Margin="0,0,10,0" Value="{Binding Path=Settings.MaxAnswers, Mode=OneTime}" ValueChanged="MaxAnswers_OnValueChanged" Width="150" Increment="1" Minimum="3" Maximum="10"/>
+            <NumericUpDown Grid.Row="1" Grid.Column="1" Margin="0,0,10,0" Width="150" Increment="1" Minimum="3" Maximum="10"
+                           Value="{Binding Settings.MaxAnswers, Mode=OneTime}" ValueChanged="MaxAnswers_OnValueChanged" />
         </Grid>
     </StackPanel>
 </UserControl>
