Add better support for localization
Signed-off-by: Tin Svagelj <tin.svagelj@live.com>

--- a/Wordel/Wordel/Views/GameView.axaml
+++ b/Wordel/Wordel/Views/GameView.axaml
@@ -17,5 +17,7 @@
         </Grid>
         <StackPanel Name="AnswerStackPanel" Spacing="5">
         </StackPanel>
+        <StackPanel Name="KeyboardStackPanel" Spacing="5">
+        </StackPanel>
     </StackPanel>
 </UserControl>
