--- a/Wordel/Wordel/Views/SettingsView.axaml
+++ b/Wordel/Wordel/Views/SettingsView.axaml
@@ -3,6 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:Wordel.ViewModels"
+             xmlns:components="clr-namespace:Wordel.Components"
              mc:Ignorable="d"
              d:DesignWidth="400"
              d:DesignHeight="600"
@@ -14,16 +15,8 @@
         <Grid Height="50" ColumnDefinitions="*, Auto">
             <TextPresenter Grid.Column="0" 
                            Margin="5,0,0,0" VerticalAlignment="Center" TextAlignment="Left" FontWeight="ExtraBold" FontSize="25">Settings</TextPresenter>
-            <Image Grid.Column="1" Margin="5" PointerReleased="Close_OnPointerReleased" Source="/Assets/close.png"/>
+            <components:IconButton Grid.Column="1" Icon="/Assets/icons/close.png" Click="Close_OnPointerReleased" />
         </Grid>
-        <Grid Name="OptionsGrid" ColumnDefinitions="*, Auto" RowDefinitions="Auto, Auto">
-            <TextPresenter Grid.Row="0" Grid.Column="0" Margin="10,0,0,0" VerticalAlignment="Center" TextAlignment="Left" FontSize="18">Duljina riječi:</TextPresenter>
-            <NumericUpDown Grid.Row="0" Grid.Column="1" Margin="0,0,10,0" Width="150" Increment="1" Minimum="4" Maximum="10"
-                           Value="{Binding Settings.WordLength, Mode=OneTime}" ValueChanged="WordLength_OnValueChanged" />
-            
-            <TextPresenter Grid.Row="1" Grid.Column="0" Margin="10,0,0,0" VerticalAlignment="Center" TextAlignment="Left" FontSize="18">Broj pokušaja:</TextPresenter>
-            <NumericUpDown Grid.Row="1" Grid.Column="1" Margin="0,0,10,0" Width="150" Increment="1" Minimum="3" Maximum="10"
-                           Value="{Binding Settings.MaxAnswers, Mode=OneTime}" ValueChanged="MaxAnswers_OnValueChanged" />
-        </Grid>
+        <Grid x:Name="OptionsGrid"></Grid>
     </StackPanel>
 </UserControl>
