--- a/Wordel/Wordel.Web/AppBundle/app.css
+++ b/Wordel/Wordel.Web/AppBundle/app.css
@@ -1,23 +1,22 @@
 ﻿/* HTML styles for the splash screen */
 
+body {
+    margin: 0;
+}
+
 .highlight {
     color: white;
     font-size: 2.5rem;
     display: block;
 }
 
-.purple {
-    color: #8b44ac;
-}
-
 .icon {
-    opacity: 0.05;
     height: 35%;
     width: 35%;
     position: absolute;
     background-repeat: no-repeat;
-    right: 0px;
-    bottom: 0px;
+    right: 0;
+    bottom: 0;
     margin-right: 3%;
     margin-bottom: 5%;
     z-index: 5000;
@@ -25,7 +24,7 @@
     pointer-events: none;
 }
 
-#avalonia-splash a {
+#splash a {
     color: whitesmoke;
     text-decoration: none;
 }
@@ -37,16 +36,14 @@
     height: 100vh;
 }
 
-#avalonia-splash {
+#splash {
     position: relative;
     height: 100%;
     width: 100%;
     color: whitesmoke;
-    background: #1b2a4e;
     font-family: 'Nunito', sans-serif;
-    background-position: center;
     background-size: cover;
-    background-repeat: no-repeat;
+    background: #2e394e;
     justify-content: center;
     align-items: center;
 }
