--- a/Wordel/Wordel/Views/MainWindowView.axaml
+++ b/Wordel/Wordel/Views/MainWindowView.axaml
@@ -6,7 +6,7 @@
         xmlns:views="clr-namespace:Wordel.Views"
         mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="600"
         Width="400" Height="600"
-        x:Class="Wordel.Views.MainWindow"
+        x:Class="Wordel.Views.MainWindowView"
         Icon="/Assets/icon.ico"
         Title="Wordel"
         Content="{Binding Content}">
