Fix Android build
Add SQLite backed game stats tracking
- Doesn't seem to work on Android yet
Cleanup some code

Signed-off-by: Tin Svagelj <tin.svagelj@live.com>

--- a/Wordel/Wordel/Views/SettingsView.axaml
+++ b/Wordel/Wordel/Views/SettingsView.axaml
@@ -13,8 +13,8 @@
     </Design.DataContext>
     <StackPanel Spacing="15">
         <Grid Height="50" ColumnDefinitions="*, Auto">
-            <TextPresenter Grid.Column="0" 
-                           Margin="5,0,0,0" VerticalAlignment="Center" TextAlignment="Left" FontWeight="ExtraBold" FontSize="25">Settings</TextPresenter>
+            <TextPresenter Name="TitlePresenter" Grid.Column="0" 
+                           Margin="5,0,0,0" VerticalAlignment="Center" TextAlignment="Left" FontWeight="ExtraBold" FontSize="25" Text="{Binding ScreenTitle}" />
             <components:IconButton Grid.Column="1" Icon="/Assets/icons/close.png" Click="Close_OnPointerReleased" />
         </Grid>
         <Grid x:Name="OptionsGrid"></Grid>
