--- a/Wordel/Wordel/App.axaml
+++ b/Wordel/Wordel/App.axaml
@@ -25,8 +25,22 @@
             <Setter Property="BorderBrush" Value="{DynamicResource AccentBrush}"/>
             <Setter Property="Foreground" Value="{DynamicResource AccentBrush}"/>
             <Setter Property="FontWeight" Value="600"/>
-            <Setter Property="Width" Value="20"/>
-            <Setter Property="Height" Value="20"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+
+            <Setter Property="Width" Value="26"/>
+            <Setter Property="Height" Value="32"/>
+        </Style>
+        <Style Selector="Button.keyboard.erase">
+            <Setter Property="Background" Value="{DynamicResource WrongAnswerBrush}"/>
+            <Setter Property="BorderBrush" Value="{DynamicResource ForegroundBrush}"/>
+            <Setter Property="Foreground" Value="{DynamicResource ForegroundBrush}"/>
+        </Style>
+        <Style Selector="Button.keyboard.confirm">
+            <Setter Property="Background" Value="{DynamicResource CorrectAnswerBrush}"/>
+            <Setter Property="BorderBrush" Value="{DynamicResource ForegroundBrush}"/>
+            <Setter Property="Foreground" Value="{DynamicResource ForegroundBrush}"/>
         </Style>
         <Style Selector="Button.keyboard:pointerover">
             <Setter Property="Background" Value="Transparent"/>
