--- a/Wordel/Wordel/Views/MainWindow.axaml
+++ b/Wordel/Wordel/Views/MainWindow.axaml
@@ -4,10 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:Wordel.Views"
-        mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="600"
+        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         Width="400" Height="600"
-        x:Class="Wordel.Views.MainWindowView"
+        x:Class="Wordel.Views.MainWindow"
         Icon="/Assets/icon.ico"
-        Title="Wordel"
-        Content="{Binding Content}">
+        Title="Wordel">
+        <views:MainView />
 </Window>
