Fix Android missing SQLite dlls
Fix a bug where invalid input would consume a try
Update dependencies

Signed-off-by: Tin Svagelj <tin.svagelj@live.com>

--- a/Wordel/Wordel/Views/StatsView.axaml
+++ b/Wordel/Wordel/Views/StatsView.axaml
@@ -43,6 +43,7 @@
             <TextBlock Grid.Row="5" Grid.Column="1" Text="{Binding LongestGuess}" />
             <TextBlock Grid.Row="6" Grid.Column="0" Text="{Binding StatQuickest}"/>
             <TextBlock Grid.Row="6" Grid.Column="1" Text="{Binding QuickestVictory}" />
+            <TextBlock Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding StoreDir}"/>
         </Grid>
     </Grid>
 </UserControl>
