--- a/Wordel/Wordel/Views/GameView.axaml
+++ b/Wordel/Wordel/Views/GameView.axaml
@@ -4,12 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:Wordel.ViewModels"
              xmlns:components="clr-namespace:Wordel.Components"
-             mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="600"
+             mc:Ignorable="d" d:DesignWidth="450" d:DesignHeight="600"
              x:Class="Wordel.Views.GameView">
   <Design.DataContext>
     <viewModels:GameViewModel />
   </Design.DataContext>
-    <Grid RowDefinitions="Auto,Auto,*,Auto">
+    <Grid RowDefinitions="Auto,*,Auto,Auto">
         <Grid Grid.Row="0" Height="50" ColumnDefinitions="*, *, *">
             <StackPanel Grid.Column="0" Orientation="Horizontal" Height="50">
                 <components:IconButton Icon="/Assets/icons/new.png" Click="NewGame_OnPointerReleased" />
@@ -21,8 +21,10 @@
             </StackPanel>
         </Grid>
         
-        <StackPanel Grid.Row="1" x:Name="AnswerStackPanel" Spacing="5" Margin="0,10">
-        </StackPanel>
+        <ScrollViewer Grid.Row="1">
+            <StackPanel x:Name="AnswerStackPanel" Spacing="5" Margin="0,10">
+            </StackPanel>
+        </ScrollViewer>
         
         <StackPanel Grid.Row="2" x:Name="MessageStackPanel" Spacing="5">
         </StackPanel>
